# tuneterm

./: .gitignore  HANDOFF.md  LICENSE  README.md  TEST_INFRA.md  TEST_READY.md  build.py  code_review.md  progress.md  pyproject.toml
tests/: conftest.py  test_challenger_verification.py  test_concurrency.py  test_e2e.py  test_engine.py  test_integration.py  test_milestone2.py  test_milestone2_stress.py  test_playlist.py  test_streaming.py  test_ui.py
tuneterm/: __main__.py  cli.py
tuneterm/integrations/: discord_rpc.py  lastfm.py  lyrics_fetch.py  spotify.py
tuneterm/player/: __init__.py  crossfade.py  engine.py  equalizer.py  library.py  metadata.py  playlist.py  playlists.py  streaming.py
tuneterm/themes/: __init__.py
tuneterm/ui/: add_url_modal.py  app.py  controls.py  equalizer_panel.py  file_browser.py  first_run.py  help_modal.py  lyrics_panel.py  now_playing.py  playlists_modal.py  save_playlist_modal.py  search_modal.py  spinning_art.py  spotify_import_modal.py  status_bar.py  styles.tcss  track_list.py  visualizer.py
tuneterm/utils/: ascii_art.py  circular_crop.py  config.py  logger.py  session.py
